Friend profile editable and fixed, dashboard are fully functional. Not tested delete friend. Next step is adding modals to base for common operations, then test delete friend

--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -1,5 +1,4 @@
-{% extends "base.html" %}
-{% import "bootstrap/wtf.html" as wtf %}
+{% extends "anonymous.html" %}
 
 {% block title %}Kind Table - Register{% endblock %}
 
