--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -24,7 +24,51 @@
           <![endif]-->
 </head>
   <body>
-          {% if current_user.is_authenticated %}
+
+<!-- Modals -->
+
+<div class="modal fade" id="findFriendModal" tabindex="-1" role="dialog" aria-labelledby="findFriendModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="findFriendModalLabel">Find a Friend on Kind Table</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class = "row round_hidden_div" style="padding-top: 2em">
+                  <p class="text-muted">If your friend is registered with Kind Table, an email will be sent on your behalf asking them to share their profile with you.</p>
+                  <p class="text-muted">If your friend is not registered, an email will be sent on your behalf asking them to register so you can invite them
+                    to parties.</p>
+
+                  <p class="text-muted">If you don't want any emails sent to your friends, opt to Creat a Profile for your friends. This will be your own private dossier on your friends dietary preferences.</p>
+
+                  <p class="text-muted">No emails will ever be sent to your friends without your consent.</p>
+
+                {% from "_formhelpers.html" import render_field %}
+                    <form action="{{ url_for('profiles.changefirstname') }}" class="form form-horizontal" method="post" role="form" id="changeFirstName">
+                    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+                    <input type="hidden" name="profile_id" value="{{  profile.profile_id  }}"/>
+                        {{ render_field(first_name_form.first_name,  cols="40", rows="1") }}
+                        <input type="submit" class="btn btn-sm btn-default" value="Submit">&ensp;<button type="button" class="btn btn-sm btn-default" data-dismiss="modal">Cancel</button>
+                    </form>
+                </div>  
+            </div>
+        </div>
+         <script src="{{ url_for('static', filename = 'js/firstName.js') }}" type="text/javascript"></script>
+    </div>
+</div>
+
+
+
+
+
+
+
+<!-- Begin navbar -->
+
+
             <nav class="navbar navbar-default">
               <div class="container-fluid">
                <!--     Brand and toggle get grouped for better mobile display--> 
@@ -44,9 +88,8 @@
                     <li class="dropdown">
                       <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">My Friends<span class="caret"></span></a>
                       <ul class="dropdown-menu">
-                        {% if friends is defined %}
-                        {% if friends %}
-                        {% for friend in friends %}
+                        {% if current_user.friends %}
+                        {% for friend in current_user.friends %}
                         <li>
                           <a href="{{ url_for('profiles.show_friend_profile', friend_id=friend.friend_profile.profile_id) }}">
                             {% if friend.friend_profile.first_name is not none %}{{ friend.friend_profile.first_name }}{% else %}{%endif %} {% if friend.friend_profile.last_name is not none %}{{ friend.friend_profile.last_name }}{% else %}{%endif %}
@@ -56,7 +99,6 @@
                         {% endfor %}
                         {% else %}
                         {% endif %}
-                        {% endif %}
                         <li role="separator" class="divider"></li>
                         <li><a href="/findfriend">Add a new friend</a></li>
                         <li><a href="/findmanyfriends">Add multiple friends</a></li>
@@ -65,13 +107,11 @@
                     <li class="dropdown">
                       <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">My Parties<span class="caret"></span></a>
                       <ul class="dropdown-menu">
-                        {% if parties is defined %}
-                        {% if parties %}
-                        {% for party in parties %}
+                        {% if current_user.parties %}
+                        {% for party in current_user.parties %}
                           <li><a href="{{ url_for('profiles.show_party_profile', party_id = party.party_id) }}">{{  party.title  }}</a></li>
                         {% endfor %}
                         {% else %}
-                        {% endif %}
                         {% endif %}
                         <li role="separator" class="divider"></li>
                         <li><a href="/addaparty">Create a party</a></li>
@@ -84,29 +124,6 @@
                 </div><!-- /.navbar-collapse -->
               </div><!-- /.container-fluid -->
             </nav>
-          {% else %}
-            <nav class="navbar navbar-default">
-              <div class="container-fluid">
-               <!--     Brand and toggle get grouped for better mobile display--> 
-                 <div class="navbar-header">
-                  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                  </button>
-                  <a class="navbar-brand" href="/">Kind Table</a>
-                </div>
-              <!-- Collect the nav links, forms, and other content for toggling -->
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                  <ul class="nav navbar-nav">
-                    <li><a href={{ url_for('auth.register') }}>New User? Register here.</a></li>
-                    <li><a href={{ url_for('auth.login') }}>Log in</a></li>
-                  </ul>
-                </div><!-- /.navbar-collapse -->
-              </div><!-- /.container-fluid -->
-            </nav>
-          {% endif %}
 
           <!-- ------------ -->
 
