--- a/app/templates/profiles/friend_profile_fixed.html
+++ b/app/templates/profiles/friend_profile_fixed.html
@@ -31,7 +31,7 @@
                     {% from "_formhelpers.html" import render_field %}
                     <form action="{{ url_for('profiles.add_to_party') }}" class="form form-horizontal" method="POST" role="form" id="inviteForm">
                         <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
-                        <input type="hidden" name="profile_id" value="{{  profile.profile_id  }}"/>
+                        <input type="hidden" name="profile_id" value="{{  profile_id  }}"/>
                         <input type="hidden" name="friend_profile_id" value="{{  friend_profile.profile_id  }}"/>
                         {{ render_field(invite_form.parties) }}
                         <input type="submit" class="btn btn-sm btn-default" value="Submit">
@@ -39,7 +39,7 @@
                             Close
                         </button>
                     </form>
-                    <script src="/static/js/inviteFriendToParties.js"></script>
+                     <script src="{{ url_for('static', filename = 'js/InviteFriendToParties.js') }}" type="text/javascript"></script>
                     {% else %}
                     <span class="text-danger">Whoops! You will need to add at least one new party first before adding guests.</span>
                     {% endif %}
@@ -54,7 +54,7 @@
     <div class="modal-dialog">
         <div class="modal-content" role="document">
             <div class="modal-header">
-                <h4 class="modal-title" id="removeFriendModalLabel">Remove a Friend</h4>
+                <h4 class="modal-title" id="removeFriendModalLabel">Remove {% if friend_profile.first_name is not none %}{{ friend_profile.first_name }}{% else %}{{ friend.friend_profile.email }}{%endif %}</h4>
                 <div id="flashedalert"></div>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
@@ -70,9 +70,9 @@
                     </div>
 
                     {% from "_formhelpers.html" import render_field %}
-                    <form action="{{ url_for('profiles.add_to_party') }}" class="form form-horizontal" method="POST" role="form" id="inviteForm">
+                    <form action="{{ url_for('profiles.delete_friend') }}" class="form form-horizontal" method="POST" role="form" id="deleteForm">
                         <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
-                        <input type="hidden" name="profile_id" value="{{  profile.profile_id  }}"/>
+                        <input type="hidden" name="profile_id" value="{{  profile_id  }}"/>
                         <input type="hidden" name="friend_profile_id" value="{{  friend_profile.profile_id  }}"/>
                         <input type="submit" class="btn btn-lg btn-danger" value="Delete Friend"><br><br>
                         
@@ -80,8 +80,35 @@
                             Close
                         </button>
                     </form>
-                    <script src="/static/js/inviteFriendToParties.js"></script>
-                    
+                </div>
+            </div>
+        </div>
+        
+    </div>
+</div>
+
+
+<div class="modal fade" id="notesModal" tabindex="-1" role="dialog" aria-labelledby="notesModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content" role="document">
+            <div class="modal-header">
+                <h4 class="modal-title" id="notesModalLabel">Friend notes</h4>
+                <div id="flashedalert"></div>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class = "row round_hidden_div" style="padding-top: 2em">
+                    {% from "_formhelpers.html" import render_field %}
+                    <form action="{{ url_for('profiles.changefriendnotes') }}" class="form form-horizontal" method="post" role="form" id="notesForm">
+                        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+                        <input type="hidden" name="friend_profile_id" value="{{  friend_profile.profile_id  }}"/>
+                        {{ render_field(notes_form.notes, cols="65", rows="5", maxlength=300) }}
+                        <input type="submit" class="btn btn-sm btn-default" value="Submit">
+                        <button type="button" class="btn btn-sm btn-danger" id="deletenote">Delete note</button>
+                     </form>
+                    <script src="{{ url_for('static', filename = 'js/friendNotes.js') }}" type="text/javascript"></script>
                 </div>
             </div>
         </div>
@@ -94,7 +121,10 @@
     <div class="row well-spaced" style="padding-top: 3em">
         <div class="col-md-4 col-md-offset-1">      
             <div class = "row round_div" style="padding-top: 2em">
-                <h3>Profile</h3>
+                <h3>{% if friend_profile.first_name is not none %}{{ friend_profile.first_name }} {{  friend_profile.last_name  }}'s
+                    {% else %}
+                        {{ friend.friend_profile.email }}'s
+                    {%endif %} Profile</h3>
                 <div class='lastUpdated'>
                     <div id='lastUpdated' class="text-muted small" style='padding-bottom: 1em'>
                         Last updated {{ moment(friend_profile.last_updated).format('LLLL') }}
@@ -161,9 +191,10 @@
                     </div>
                 </div>
 
-                <div id="remove" style="padding-top: 1em">
-                    <button type="button" class="btn btn-sm btn-warning" href="#" data-toggle="modal" data-target="#removeFriend">
-                        Remove Friend
+                <div id="remove" style="padding-top: 3em">
+                    <small>Don't want to be friends with this person on Kind Table anymore?</small>
+                    <button type="button" class="btn btn-sm btn-default" href="#" data-toggle="modal" data-target="#removeFriend">
+                        <span class="text-danger">Remove Friend</span>
                     </button>
                 </div>
             </div>
@@ -172,10 +203,23 @@
         <div class="col-md-5 col-md-offset-1">      
             <div class = "row round_div" style="padding-top: 2em">
                 
-                <h3>Upcoming Parties Invited To</h3>
+                <div class='friend_notes'>
+                    <div id="friend_notes" style="padding-top: 1em">
+                        {% if friend_profile_notes %}
+                        <h3>Notes&emsp;
+                        <button type="button" class="btn btn-sm btn-default" data-toggle="modal" data-target="#notesModal" title="Add or update the notes for this friend"><span class="glyphicon glyphicon-pencil text-info" aria-hidden="true"></span></button></h3>
+                            {{  friend_profile_notes}}</dd>
+                        {% else %}
+                            <h3>Notes&emsp;<button type="button" class="btn btn-sm btn-default" title="Add some private notes about this friend" data-toggle="modal" data-target="#notesModal">add</button></h3>
+                            <span class="text-muted strong">No notes added.<br>Is there anything that would make your friend more comfortable at your table? Keep track of that information here.</span> 
+                        {% endif %}
+                    </div>
+                </div>
+                
                 <div class="upcomingParties">
                     <div id="upcomingParties">
-                        <button type="button" class="btn btn-sm btn-default" href="#" data-toggle="modal" data-target="#inviteModal">
+                        <h3>Upcoming Parties Invited To</h3>
+                        <button type="button" class="btn btn-sm btn-success" href="#" data-toggle="modal" data-target="#inviteModal">
                                 Invite To Parties
                         </button><br><br>
                         {% if upcoming_parties %}
