--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,64 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <title>Kind Table</title>
-
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <title>Kind Table</title>
 
   <!-- Bootstrap -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="{{  url_for('static', filename='site.css') }}">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="{{  url_for('static', filename='site.css') }}">
 
 
-  {{ moment.include_jquery() }}
-  {{ moment.include_moment() }}
+    {{ moment.include_jquery() }}
+    {{ moment.include_moment() }}
 
-  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-        <!--[if lt IE 9]>
-          <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-          <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-          <![endif]-->
+      <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+      <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+            <!--[if lt IE 9]>
+              <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+              <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+              <![endif]-->
 </head>
-  <body>
-
+<body>
 <!-- Modals -->
-
-<div class="modal fade" id="findFriendModal" tabindex="-1" role="dialog" aria-labelledby="findFriendModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="findFriendModalLabel">Find a Friend on Kind Table</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
+    <div class="modal fade" id="findFriendModal" tabindex="-1" role="dialog" aria-labelledby="findFriendModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content" id="loadFindFriendHere">
+                
             </div>
-            <div class="modal-body">
-                <div class = "row round_hidden_div" style="padding-top: 2em">
-                  <p class="text-muted">If your friend is registered with Kind Table, an email will be sent on your behalf asking them to share their profile with you.</p>
-                  <p class="text-muted">If your friend is not registered, an email will be sent on your behalf asking them to register so you can invite them
-                    to parties.</p>
-
-                  <p class="text-muted">If you don't want any emails sent to your friends, opt to Creat a Profile for your friends. This will be your own private dossier on your friends dietary preferences.</p>
-
-                  <p class="text-muted">No emails will ever be sent to your friends without your consent.</p>
-
-                {% from "_formhelpers.html" import render_field %}
-                    <form action="{{ url_for('profiles.changefirstname') }}" class="form form-horizontal" method="post" role="form" id="changeFirstName">
-                    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
-                    <input type="hidden" name="profile_id" value="{{  profile.profile_id  }}"/>
-                        {{ render_field(first_name_form.first_name,  cols="40", rows="1") }}
-                        <input type="submit" class="btn btn-sm btn-default" value="Submit">&ensp;<button type="button" class="btn btn-sm btn-default" data-dismiss="modal">Cancel</button>
-                    </form>
-                </div>  
-            </div>
+            <script src="{{ url_for('static', filename = 'js/findFriend.js') }}" type="text/javascript"></script>  
         </div>
-         <script src="{{ url_for('static', filename = 'js/firstName.js') }}" type="text/javascript"></script>
     </div>
-</div>
 
 
 
@@ -69,101 +42,96 @@
 <!-- Begin navbar -->
 
 
-            <nav class="navbar navbar-default">
-              <div class="container-fluid">
-               <!--     Brand and toggle get grouped for better mobile display--> 
-                <div class="navbar-header">
-                  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+        <!--     Brand and toggle get grouped for better mobile display--> 
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
-                  </button>
-                  <a class="navbar-brand" href="/">Kind Table</a>
-                </div>
-                <!-- Collect the nav links, forms, and other content for toggling -->
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                  <ul class="nav navbar-nav">
-                   <li><a href="{{  url_for('profiles.show_dashboard')  }}">Dashboard</a></li>
-                    <li class="dropdown">
-                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">My Friends<span class="caret"></span></a>
-                      <ul class="dropdown-menu">
-                        {% if current_user.friends %}
-                        {% for friend in current_user.friends %}
-                        <li>
-                          <a href="{{ url_for('profiles.show_friend_profile', friend_id=friend.friend_profile.profile_id) }}">
-                            {% if friend.friend_profile.first_name is not none %}{{ friend.friend_profile.first_name }}{% else %}{%endif %} {% if friend.friend_profile.last_name is not none %}{{ friend.friend_profile.last_name }}{% else %}{%endif %}
-                            ({{ friend.friend_profile.email }})
-                          </a>
-                        </li>
-                        {% endfor %}
-                        {% else %}
-                        {% endif %}
-                        <li role="separator" class="divider"></li>
-                        <li><a href="/findfriend">Add a new friend</a></li>
-                        <li><a href="/findmanyfriends">Add multiple friends</a></li>
-                      </ul>    
+                </button>
+                <a class="navbar-brand" href="/">Kind Table</a>
+            </div>
+        <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <li>
+                        <a href="{{  url_for('profiles.show_dashboard')  }}">Dashboard</a>
                     </li>
                     <li class="dropdown">
-                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">My Parties<span class="caret"></span></a>
-                      <ul class="dropdown-menu">
-                        {% if current_user.parties %}
-                        {% for party in current_user.parties %}
-                          <li><a href="{{ url_for('profiles.show_party_profile', party_id = party.party_id) }}">{{  party.title  }}</a></li>
-                        {% endfor %}
-                        {% else %}
-                        {% endif %}
-                        <li role="separator" class="divider"></li>
-                        <li><a href="/addaparty">Create a party</a></li>
-                      </ul>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">My Friends<span class="caret"></span></a>
+                        <ul class="dropdown-menu" id="friendsDropDown">
+                            {% if current_user.valid_friends() %}
+                            {% for friend in current_user.valid_friends() %}
+                                <li class="myFriends">
+                                    <a href="{{ url_for('profiles.show_friend_profile', friend_id=friend.friend_profile.profile_id) }}">
+                                        {% if friend.friend_profile.first_name is not none %}{{ friend.friend_profile.first_name }}{% else %}{%endif %} {% if friend.friend_profile.last_name is not none %}{{ friend.friend_profile.last_name }}{% else %}{%endif %}
+                                        ({{ friend.friend_profile.email }})
+                                    </a>
+                                </li>
+                            {% endfor %}
+                            {% else %}
+                            {% endif %}
+                            <li role="separator" class="divider"></li>
+                            <li><a data-toggle="modal" id="findFriendLink" data-target="#findFriendModal">Connect a new friend</a></li>
+                            <li><a href="{{ url_for('profiles.find_a_friend') }}">Create a New Friend Profile</a></li>
+                        </ul>    
                     </li>
-                  </ul>    
-                  <ul class="nav navbar-nav navbar-right">
+                    <li class="dropdown" id="partiesDropDown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">My Parties<span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            {% if current_user.parties %}
+                            {% for party in current_user.parties %}
+                            <li><a href="{{ url_for('profiles.show_party_profile', party_id = party.party_id) }}">{{  party.title  }}</a></li>
+                            {% endfor %}
+                            {% else %}
+                            {% endif %}
+                            <li role="separator" class="divider"></li>
+                            <li><a href="/addaparty">Create a party</a></li>
+                        </ul>
+                    </li>
+                </ul>    
+                <ul class="nav navbar-nav navbar-right">
                     <li><a href="{{ url_for('auth.logout')  }}">Log out</a></li>
-                  </ul>
-                </div><!-- /.navbar-collapse -->
-              </div><!-- /.container-fluid -->
-            </nav>
+                </ul>
+            </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
+    </nav>
 
-          <!-- ------------ -->
+<!-- ------------ -->
 
-            <div class="container-fluid">
-                <div class="container">
-                  {% with messages = get_flashed_messages(with_categories=true) %}
-                    {% if messages %}
-                      {% for category, message in messages %}
-                        <div class="alert alert-{{ category }}">{{ message }}</div>
-                      {% endfor %}
-                    {% endif %}
-                  {% endwith %}
-                </div></div>
+    <div class="container-fluid">
+        <div class="container">
+          {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+              {% for category, message in messages %}
+                <div class="alert alert-{{ category }}">{{ message }}</div>
+              {% endfor %}
+            {% endif %}
+          {% endwith %}
+        </div>
+    </div>
 
-            {% block content %}
-
-
-
-                <div id="extending">
-                {% block page_content %}{% endblock %}
-                </div>
-              
-            {% endblock %}  <!-- /content -->
-
-            {% block scripts %}
-              {{ moment.include_moment() }}
+    {% block content %}
+        <div id="extending">
+            {% block page_content %}
             {% endblock %}
+        </div>
+    {% endblock %}  <!-- /content -->
 
-            <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-            <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-            <!-- Include all compiled plugins (below), or include individual files as needed -->
-            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
-
-            <script>
-              $(document).ready(function(){
-                  jQuery('[data-toggle="tooltip"]').tooltip(); 
-              });
-            </script>
-
-
-          </body>
-          </html>
+    {% block scripts %}
+        {{ moment.include_moment() }}
+        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+        <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+        <!-- Include all compiled plugins (below), or include individual files as needed -->
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+        <script>
+            $(document).ready(function(){
+                jQuery('[data-toggle="tooltip"]').tooltip(); 
+            });
+        </script>
+    {% endblock %}
+</body>
+</html>
