Added favicons, added abilty to add an existing user as a friend (templates/routes/forms), added popovers to register form

--- a/app/static/site.css
+++ b/app/static/site.css
@@ -1,9 +1,5 @@
 body {
-  background-image: url(/static/swirl_pattern.png);
-}
-
-.well-spaced {
-    background-color: rgba(245, 245, 245, 0.25);
+  background-image: url(/static/wood-2142217_1920.jpg);
 }
 
 
