--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -3,12 +3,11 @@
 {% block title %}Kind Table - Login{% endblock %}
 
 {% block page_content %}
-<div class="page-header">
+
     <h1>Login</h1>
-</div>
 
 
-<div class="row well-spaced">
+<div class="row well-spaced" style="padding-top: 3em">
     <div class="col-md-4 col-md-offset-4">
         <div class = "row round_hidden_div form-group" style="padding-top: 2em">
             {% from "_formhelpers.html" import render_field, render_checkbox_field %}
