--- a/app/templates/profiles/email/friend_new_user.html
+++ b/app/templates/profiles/email/friend_new_user.html
@@ -18,7 +18,7 @@ registration.</p>
 <p>To become friends with {{ friend.first_name}} {{ friend.last_name  }}({{  friend.email  }}), click 
 on the following link and sign in to your KindTable account:</p>
 
-<p>{{ url_for('profile.confirm_friendship', token=token, _external=True) }}</p>
+<p>{{ url_for('profiles.reg_confirm_friendship', token=token, _external=True) }}</p>
 
 <p>Sincerely,</p>
 
