--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -7,11 +7,11 @@
     <h1>404 Page not Found</h1>
 </div>
 
+<div class="row well-spaced">
+        <div class="col-md-4 col-md-offset-4">     
 
 <h1 style="color:red">
-Oh noes! Something went wrong! Error logging has not been implemented yet, do you want to tell me what you were doing when you got this error? Email 
-
-<a href="mailto:kindtableapp@gmail.com?Subject=404 Error Report" target="_top">kindtableapp@gmail.com</a>
+Oh noes! Something went wrong!  Email <a href="mailto:kindtableapp@gmail.com?Subject=404 Error Report" target="_top">kindtableapp@gmail.com</a> for help
 
 </h1>
 
