--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -3,24 +3,37 @@
 {% block title %}Kind Table - Register{% endblock %}
 
 {% block page_content %}
-<div class="page-header">
-    <h1>Register</h1>
-</div>
 
-<div class="row well-spaced" style="padding-top: 1em">
+    <h1>Register</h1>
+
+
+<div class="row" style="padding-top: 3em">
     <div class="col-md-4 col-md-offset-2">
         <div class = "row round_hidden_div">
             {% from "_formhelpers.html" import render_field %}
             <form class="form form-horizontal" method="post" role="form">
             <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
             <dl>
-            {{ render_field(form.first_name, cols="40", rows="1", maxlength=64) }}
-            {{ render_field(form.last_name, cols="40", rows="1", maxlength=64) }}
-            {{ render_field(form.diet)  }}
-            {{ render_field(form.diet_reason, cols="55", rows="4", maxlength=128)  }}
+            {{ form.first_name.label }}<br>
+            {{ form.first_name(cols="40", rows="1", maxlength=64)}}
+            {{ form.last_name.label }}
+            {{ form.last_name(cols="40", rows="1", maxlength=64) }}<br>
+{{ form.diet.label }}&ensp;<a role="button" tabindex="0" data-container="body" data-toggle="popover" data-html='true' data-trigger="focus" data-placement="right" title="Diet definitions" data-content="<p>We ask for your diet so that the recipes work for you, too.
+            Don't worry if your diet is actually more 
+            complex than these terms, you will get to customize this more later. 
+            (Also, you can change this information at any time.)</p>
+           
+            {% for diet in diets %}
+            <strong>{{  diet.diet_type  }}:</strong> {{  diet.description  }}<br>
+            {% endfor %}</p>"><span class="glyphicon glyphicon-info-sign text-info"></span></a>
+            {{ form.diet }}
+            {{ form.diet_reason.label}}&ensp;<a role="button" tabindex="0" data-container="body" data-toggle="popover" data-html='true' data-trigger="focus" data-placement="top" title="Reason you follow this diet" data-content="The diet reason field is optional, we show that information to your friends 
+            so they can make better decisions about how to make you feel comfortable
+            and welcome at their table."><span class="glyphicon glyphicon-info-sign text-info"></span></a>
+            {{ form.diet_reason(cols="55", rows="4", maxlength=128)  }}
             {{ render_field(form.email, cols="40", rows="1")  }}
-            {{ render_field(form.password, cols="40", rows="1", maxlength=50)   }}
-            {{ render_field(form.password2, cols="40", rows="1", maxlength=50)   }}
+            {{ render_field(form.password)   }}
+            {{ render_field(form.password2)   }}
             </dl>
             
             <p><input type=submit class="btn btn-success" value=Register>
@@ -46,5 +59,11 @@
         </div>
     </div>
 </div>
+
+<script>
+$(function () {
+  $('[data-toggle="popover"]').popover()
+})
+</script>
 
 {% endblock %}
