--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -21,6 +21,16 @@
               <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
               <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
               <![endif]-->
+
+<link rel="apple-touch-icon" sizes="180x180" href="/static/apple-touch-icon.png">
+<link rel="icon" type="image/png" href="/static/favicon-32x32.png" sizes="32x32">
+<link rel="icon" type="image/png" href="/static/favicon-16x16.png" sizes="16x16">
+<link rel="manifest" href="/static/manifest.json">
+<link rel="mask-icon" href="/static/safari-pinned-tab.svg" color="#5bbad5">
+<link rel="shortcut icon" href="/static/favicon.ico">
+<meta name="msapplication-config" content="/static/browserconfig.xml">
+<meta name="theme-color" content="#ffffff">
+
 </head>
 <body>
 <!-- Modals -->
@@ -63,12 +73,12 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">My Friends<span class="caret"></span></a>
                         <ul class="dropdown-menu" id="friendsDropDown">
-                            {% if current_user.valid_friends() %}
+                            {% if current_user.valid_friends() is defined %}
                             {% for friend in current_user.valid_friends() %}
                                 <li class="myFriends">
-                                    <a href="{{ url_for('profiles.show_friend_profile', friend_id=friend.friend_profile.profile_id) }}">
-                                        {% if friend.friend_profile.first_name is not none %}{{ friend.friend_profile.first_name }}{% else %}{%endif %} {% if friend.friend_profile.last_name is not none %}{{ friend.friend_profile.last_name }}{% else %}{%endif %}
-                                        ({{ friend.friend_profile.email }})
+                                    <a href="{{ url_for('profiles.show_friend_profile', friend_id=friend.profile_id) }}">
+                                        {% if friend.first_name is not none %}{{ friend.first_name }}{% else %}{%endif %} {% if friend.last_name is not none %}{{ friend.last_name }}{% else %}{%endif %}
+                                        ({{ friend.email }})
                                     </a>
                                 </li>
                             {% endfor %}
@@ -76,7 +86,7 @@
                             {% endif %}
                             <li role="separator" class="divider"></li>
                             <li><a data-toggle="modal" id="findFriendLink" data-target="#findFriendModal">Connect a new friend</a></li>
-                            <li><a href="{{ url_for('profiles.find_a_friend') }}">Create a New Friend Profile</a></li>
+                            <li><a href="{{ url_for('profiles.connect_friends') }}">Create Your Own Profile for a Friend</a></li>
                         </ul>    
                     </li>
                     <li class="dropdown" id="partiesDropDown">
