--- a/app/templates/profiles/dashboard.html
+++ b/app/templates/profiles/dashboard.html
@@ -207,10 +207,13 @@
 
 <!-- Begin content -->
 
+<h1 class="text-left" style="padding-left: 3em">Dashboard</h1>
     
     <div class="row well-spaced" style="padding-top: 3em">
         <div class="col-md-4 col-md-offset-1">      
             <div class = "row round_div" style="padding-top: 2em">
+                
+
                 <h3>Profile</h3>
                 <div class='lastUpdated'>
                     <div id='lastUpdated' class="text-muted small" style='padding-bottom: 1em'>
@@ -308,9 +311,9 @@
                         <ul>
                             {% for friend in current_user.valid_friends() %}
                                 <li>
-                                    <a href="{{ url_for('profiles.show_friend_profile', friend_id=friend.friend_profile.profile_id) }}">
-                                        {{ friend.friend_profile.first_name }} {{friend.friend_profile.last_name  }}
-                                    </a> <span class="text-muted">({{  friend.friend_profile.email  }})</span>
+                                    <a href="{{ url_for('profiles.show_friend_profile', friend_id=friend.profile_id) }}">
+                                        {{ friend.first_name }} {{friend.last_name  }}
+                                    </a> <span class="text-muted">({{  friend.email  }})</span>
                                 </li>
                             {% endfor %}
                         </ul>
