--- a/app/templates/profiles/friend_profile_editable.html
+++ b/app/templates/profiles/friend_profile_editable.html
@@ -344,14 +344,15 @@
 
 <!-- Begin content -->
 
-    
-    <div class="row well-spaced" style="padding-top: 3em">
+<h1 class="text-left" style="padding-left: 3em">Your Profile for {% if friend_profile.first_name is not none %}{{ friend_profile.first_name }} {{  friend_profile.last_name  }}
+{% else %}
+    {{ friend.friend_profile.email }}
+{%endif %}</h3>
+
+    <div class="row well-spaced dashboard" style="padding-top: 3em">
         <div class="col-md-4 col-md-offset-1">      
             <div class = "row round_div" style="padding-top: 2em">
-                <h3>Your Profile for {% if friend_profile.first_name is not none %}{{ friend_profile.first_name }} {{  friend_profile.last_name  }}
-                    {% else %}
-                        {{ friend.friend_profile.email }}
-                    {%endif %}</h3>
+
                 <div class='lastUpdated'>
                     <div id='lastUpdated' class="text-muted small" style='padding-bottom: 1em'>
                         Last updated {{ moment(friend_profile.last_updated).format('LLLL') }}
