--- a/app/templates/profiles/friend_profile_fixed.html
+++ b/app/templates/profiles/friend_profile_fixed.html
@@ -117,14 +117,16 @@
 </div>
 
 <!-- Begin Content -->
-    
+
+<h1 class="text-left" style="padding-left: 3em">{% if friend_profile.first_name is not none %}{{ friend_profile.first_name }} {{  friend_profile.last_name  }}'s
+{% else %}
+{{ friend.friend_profile.email }}'s
+{%endif %} Profile</h1>
+
+
     <div class="row well-spaced" style="padding-top: 3em">
         <div class="col-md-4 col-md-offset-1">      
             <div class = "row round_div" style="padding-top: 2em">
-                <h3>{% if friend_profile.first_name is not none %}{{ friend_profile.first_name }} {{  friend_profile.last_name  }}'s
-                    {% else %}
-                        {{ friend.friend_profile.email }}'s
-                    {%endif %} Profile</h3>
                 <div class='lastUpdated'>
                     <div id='lastUpdated' class="text-muted small" style='padding-bottom: 1em'>
                         Last updated {{ moment(friend_profile.last_updated).format('LLLL') }}
