--- a/app/templates/profiles/party_profile.html
+++ b/app/templates/profiles/party_profile.html
@@ -9,13 +9,12 @@
             <h1>Party Profile: {{  party.title  }}</h1><br>
             <div class="col-md-3">
                  <button type="button" class="btn btn-success btn-block" data-toggle="modal" data-target="#AddGuests">Add guests</button><br>
-                 <button type="button" class="btn btn-success btn-block" data-toggle="modal" data-target="#AddAFriend">Add a friend</button>
             </div>
 
             <div class="col-md-8">
                     <b>Guests:</b>
                
-                    {% for guest in party.users %}    
+                    {% for guest in party.guest_profiles %}    
                         <button type="button" class="btn btn-warning btn-block" data-toggle="tooltip" title="Click for more info {% if guest.first_name is not none %}about {{ guest.first_name }}{% else %}{{  guest.email  }}{%endif %}" id="friend_info{{  guest.user_id  }}" style="margin-top:5px">{{ guest.first_name }} {{guest.last_name }} ({{ guest.email }})</button>
 
                         <div class="friend_info{{  guest.user_id  }}"  hidden>
@@ -172,7 +171,7 @@
         
         <div class = "row round_div" style="padding-top: 2em">
             <div class="col-md-3">
-                <a href="/searchrecipes" class="btn btn-success btn-block">Add recipes<br>for this party</a></li>
+                <a href="{{ url_for('spoonacular.show_search_spoonacular') }}" class="btn btn-success btn-block">Add recipes<br>for this party</a></li>
             </div>
             <div class="col-md-8">
                 <b>Recipes:</b><br>
@@ -223,8 +222,8 @@
                                 <form action="/guest_added" method="POST">
                                     <div class="form-group">
                                         <label>Select friends:</label><br>
-                                            {% for person in this_user.friends %}
-                                            <input type="checkbox" name="guests" value={{ person.friends.user_id }}> {{ person.friends.first_name}} {{ person.friends.last_name }} ({{ person.friends.email }})<br>
+                                            {% for person in current_user.valid_friends() %}
+                                            <input type="checkbox" name="guests" value={{ person.profile_id }}> {{ person.first_name}} {{ person.last_name }} ({{ person.email }})<br>
                                             {% endfor %}  
                                     </div>
                                     <div class="form-group">
@@ -237,32 +236,6 @@
                     </div>
                 </div>
     
-
-
-                <!-- Modal -->
-                <div id="AddAFriend" class="modal fade" role="dialog">
-                   <div class="modal-dialog">
-
-                    <!-- Modal content-->
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal">&times;</button>
-                            <h4 class="modal-title">Add a friend</h4>
-                        </div>
-                        <div class="modal-body">
-                            <form action="/addafriendasguest" method="POST">
-                               <div class="form-group">
-                                    <label>Email address:</label>
-                                    <input type="email" name="email_address" class="form-control">
-                                </div>
-                                <div class="form-group">
-                                    <input type="submit" value="Add Friend" class="btn btn-success">    
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
 
  
 
@@ -289,7 +262,7 @@
         console.log("show form");
     });
     
-    {% for guest in party.users %}
+    {% for guest in party.guest_profiles %}
     $("#update_friend_at_party{{  guest.user_id  }}").click(function(){
         $(".update_friend_at_party{{  guest.user_id  }}").toggle();
         $(".intols{{  guest.user_id  }}").toggle();
